[Frontent][FIX]: Searchtype switch alignement

--- a/Frontend/src/custom-theme.css
+++ b/Frontend/src/custom-theme.css
@@ -154,16 +154,23 @@ li {list-style: none;}
 .search-type-text {
   font-weight: bold;
   color: var(--artshp-white);
+  padding: 8px 0;
+  margin: 0;
 }
 
-#searchType {margin: auto;}
+#searchType {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+}
 
 /* Switch */
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
-  display: inline-block;
+  display: block;
+  margin: auto 0;
   width: 55px;
   height: 28px;
 }
@@ -209,7 +216,7 @@ li {list-style: none;}
   content: "";
   height: 14px;
   width: 14px;
-  left: 1px;
+  left: 2.5px;
   bottom: 2px;
   background-color: var(--artshp-white);
   -webkit-transition: .4s;
